I added the first recipe: Beef Rendang.

--- a/recipes/rendang.html
+++ b/recipes/rendang.html
@@ -8,6 +8,29 @@
 <body>
     <a href="../index.html">Home</a>
     <h1>Authentic Beef Rendang</h1>
-    
+    <img src="../img/Rendang.png" alt="A picture of tasty beef rendang">
+    <h3>Description</h3>
+    <p>Rendang is a rich and aromatic beef dish originating from the Minangkabau people of West Sumatra, Indonesia. Often referred to as one of the world’s most flavorful stews, 
+        it is made by slow-cooking beef in a fragrant mixture of coconut milk, lemongrass, galangal, garlic, ginger, chilies, and a variety of spices. 
+        Over several hours, the liquid reduces, and the beef absorbs the spices while becoming tender and caramelized, giving rendang its signature dark, almost dry consistency and depth of flavor.</p>
+        <p>Traditionally, rendang is more than just a meal, it carries cultural significance and is often served during festive occasions, ceremonies, or to honor guests. 
+            Its long cooking process symbolizes patience, resilience, and togetherness, making it a dish deeply tied to heritage. 
+            Today, rendang is enjoyed across Indonesia and beyond, celebrated for its balance of heat, richness, and spice that lingers long after the last bite.</p>
+            <h3>Ingerdients</h3>
+            <ul>
+                <li>1 kg beef </li>
+                <li>2500 ml thick coconut milk from 3 coconuts</li> 
+                <li>3 stalks lemongrass, bruised</li>
+                <li>1 turmeric leaf, torn</li>
+                <li>5 bay leaves</li>
+        </ul>
+        <h3>Steps</h3>
+    <ol>
+        <li>Place the beef and blended spice paste into a wok. Add the lemongrass, turmeric leaf, bay leaves, and salt, then mix well. Let it sit for about 15 minutes with the heat off.</li>
+        <li>After 15 minutes, turn on the stove. The beef will begin to release its juices. Stir occasionally as the liquid increases.</li>
+        <li>Continue cooking until the liquid reduces.</li>
+        <li>Once the liquid has reduced, pour in the coconut milk. Lower the heat and cook, stirring continuously, until the beef becomes tender and the coconut milk has thickened and reduced.</li>
+    </ol>
+    <p><em>This rich and flavorful beef rendang is best enjoyed with steamed rice and fresh green sambal.</em></p>
 </body>
 </html>
