I added the second recipe: Ayam Geprek.

--- a/recipes/rendang.html
+++ b/recipes/rendang.html
@@ -10,8 +10,8 @@
     <h1>Authentic Beef Rendang</h1>
     <img src="../img/Rendang.png" alt="A picture of tasty beef rendang">
     <h3>Description</h3>
-    <p>Rendang is a rich and aromatic beef dish originating from the Minangkabau people of West Sumatra, Indonesia. Often referred to as one of the world’s most flavorful stews, 
-        it is made by slow-cooking beef in a fragrant mixture of coconut milk, lemongrass, galangal, garlic, ginger, chilies, and a variety of spices. 
+    <p>Rendang is a rich and aromatic beef dish originating from the Minangkabau people of West Sumatra, Indonesia. 
+        Often referred to as one of the world’s most flavorful stews, it is made by slow-cooking beef in a fragrant mixture of coconut milk, lemongrass, galangal, garlic, ginger, chilies, and a variety of spices. 
         Over several hours, the liquid reduces, and the beef absorbs the spices while becoming tender and caramelized, giving rendang its signature dark, almost dry consistency and depth of flavor.</p>
         <p>Traditionally, rendang is more than just a meal, it carries cultural significance and is often served during festive occasions, ceremonies, or to honor guests. 
             Its long cooking process symbolizes patience, resilience, and togetherness, making it a dish deeply tied to heritage. 
