--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/rendang.html">Beef Rendang</a>
+    <ul>
+        <li><a href="./recipes/rendang.html">Beef Rendang</a></li>
+        <li><a href="./recipes/ayamgeprek.html">Ayam Geprek</a></li>
+    </ul>
     
 </body>
 </html>
