I added the third recipe: Javanese Fried Rice.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,12 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <h3>Enjoy the authentic flavor of Indonesia with our collection of traditional recipes. 
+        From rich, slow-cooked rendang to fiery ayam geprek and smoky Javanese fried rice, each dish brings the warmth, spice, and heritage of Indonesian cuisine straight to your table.</h3>
     <ul>
         <li><a href="./recipes/rendang.html">Beef Rendang</a></li>
         <li><a href="./recipes/ayamgeprek.html">Ayam Geprek</a></li>
+        <li><a href="./recipes/javanesefriedrice.html">Javanese Fried Rice</a></li>
     </ul>
     
 </body>
